@@ -4,6 +4,8 @@
 	- Put property name on property context menu
 	- Shortcut keys added to quitting dialog
 	- Slight tooltip fixes in property editor
+	- Property context menu added for items in widget tree
+	- Widgets can now be renamed (Rename command added too)
 	
 * 2005-05-01 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Put in patch from James Graham to choose from list of fonts
